--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Favorite Animal Project</title>
+</head>
+<body>
+    <header>
+        <h1>The Honeybadger Don't Care</h1>
+        <img src="https://cdn.jwplayer.com/thumbs/CpXdNWGV-720.jpg">
+    </header>
+    <p>
+        The honey badger (Mellivora capensis), also known as the ratel (/ˈreɪtəl/ or /ˈrɑːtəl/), is a mammal widely distributed in Africa, Southwest Asia, and the Indian subcontinent. Because of its wide range and occurrence in a variety of habitats, it is listed as Least Concern on the IUCN Red List.
+    </p>
+</body>
+</html>
